Include setup chunk in code preview, parameterize xml file path

--- a/appendix2-T-A.qmd
+++ b/appendix2-T-A.qmd
@@ -9,15 +9,19 @@ format:
 
 Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1b9063234c/f337.item.r=MS%2023112).
 
-```{r ta-setup, include=FALSE}
-# Load the xml2 package
-library(xml2)
-```
 
 ::: {.column-page-outset layout="[[6,6,6]]"}
 
 ::: {.column}
 ### Minimal
+
+```{r ta-setup}
+# Load the xml2 package
+library(xml2)
+
+#Path to xml file
+path_xml <- "data/T-A.xml"
+```
 
 
 ```{r ta-function, file="convert-xml-to-html.R"}
@@ -26,7 +30,7 @@ library(xml2)
 ```{r ta-minimal, results='asis'}
 
 # PRINT "MINIMAL" VERSION
-convert_xml_to_html(xml_file = "data/T-A.xml", version_name = "minimal")
+convert_xml_to_html(xml_file = path_xml, version_name = "minimal")
 
 ```
 
@@ -38,7 +42,7 @@ convert_xml_to_html(xml_file = "data/T-A.xml", version_name = "minimal")
 
 ```{r ta-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
-convert_xml_to_html(xml_file = "data/T-A.xml", version_name = "intermediate")
+convert_xml_to_html(xml_file = path_xml, version_name = "intermediate")
 
 ```
 
@@ -49,7 +53,7 @@ convert_xml_to_html(xml_file = "data/T-A.xml", version_name = "intermediate")
 
 ```{r ta-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
-convert_xml_to_html(xml_file = "data/T-A.xml", version_name = "extensive")
+convert_xml_to_html(xml_file = path_xml, version_name = "extensive")
 ```
 
 :::
