--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -7,16 +7,18 @@ format:
 
 # Oxford, Corpus Christi College, 232
 
-```{r tc-setup, include=FALSE}
-# Load the xml2 package
-library(xml2)
-```
-
-
 ::: {.column-page-outset layout="[[6,6,6]]"}
 
 ::: {.column}
 ## Minimal
+
+```{r tc-setup}
+# Load the xml2 package
+library(xml2)
+
+#Path to xml file
+path_xml <- "data/T-C.xml"
+```
 
 ```{r tc-function, file="convert-xml-to-html.R"}
 ```
@@ -26,7 +28,7 @@ library(xml2)
 
 
 # PRINT "MINIMAL" VERSION
-convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "minimal")
+convert_xml_to_html(xml_file = path_xml, version_name = "minimal")
 
 ```
 
@@ -37,7 +39,7 @@ convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "minimal")
 
 ```{r tc-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
-convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "intermediate")
+convert_xml_to_html(xml_file = path_xml, version_name = "intermediate")
 
 ```
 
@@ -48,7 +50,7 @@ convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "intermediate")
 
 ```{r tc-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
-convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "extensive")
+convert_xml_to_html(xml_file = path_xml, version_name = "extensive")
 
 ```
 
