--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -5,7 +5,7 @@ format:
     page-layout: full
 ---
 
-# Oxford, Corpus Christi College, 232
+# Oxford, Corpus Christi College, 232  {.unlisted}
 
 ::: {.column-page-outset layout="[[6,6,6]]"}
 
