Added table of contents and styling for headers; Adjusted and renamed code chunks; Added helper functions files

--- a/appendix1.qmd
+++ b/appendix1.qmd
@@ -161,8 +161,7 @@ T-F^2^ is a single parchment folio offering thirty-eight verses of Version T, wi
 According to Tobler, who examined the parchment fragment when it was on loan in Germany, T-F^2^ is remarkably small, measuring just 70x50mm, with the text arranged in a single column within a writing space of 52x32mm.^[Even the photographic reproductions of  T-F^2^ are rather small, with the verso photograph (no. 89) measuring 107x65mm and the recto photograph (no. 101) measuring 107x155mm.] Tobler notes these unusually small proportions are likely due to the damaging effects of moisture on the parchment over time, which have caused the leaf to shrink considerably.^[“...und das Pergament unter der Wirkung von Feuchtigkeit stark verschrumpelt ist” (966). The original size of the fragment prior to this damage is unclear, but Giannini and Minervini reiterate Tobler’s account in their own description: “The folium on parchment shown on photographs nos. 101 (right [recto]) and 89 (verso) of MSS simulata orientalia 6 measured “7 Centimeter Höhe und 5 Breite”, and the lines (twenty for recto, eighteen for verso) were laid out across one column inside a frame provided with 52x32mm ruling. These measurements are skewed by the considerable shrinkage the folium suffered before 1903, ‘unter der Wirkung von Feuchtigkeit’ (under the effect of moisture), which also makes its content harder to read” (336).] The fragment’s tight spacing makes it exceptionally difficult to transcribe, and due to a rip in the parchment at the bottom left corner of the recto, the initial letters of the three verses at the bottom of that page have been lost entirely.^[Through comparison with the other Version T copies, these gaps can be filled in as follows:  
 [Nos]tre sires l’aveit si chere\
 [Q]ue plus que dos piez e demie\
-[A]veit entre la tere e le\
-]  
+[A]veit entre la tere e le]  
 
 In their recent publication concerning T-F^2^ and the other fragments of Old French recovered from the Damascus geniza, Giannini and Minervini make use of the available paleographic and linguistic evidence to conjecture — based both on the fragment’s size and the roughness of the scribal hand therein^[An obvious feature of T-F^2^ is the sudden change in ink and thickness of the letters that occurs on the thirteenth line of the recto onward.] — that T-F^2^ may represent a rare, surviving example of the sort of loosely bound booklet through which texts commonly traveled in the medieval period (351).^[“... the portable unbound or roughly assembled booklets meant not for preservation, but for fast-paced and poorly organised circulation, having made it to the modern age thanks to nothing but exceptional and fortuitous circumstances… In the face of such an imposing body of preserved material, we sometimes tend to forget that the true vehicle of circulation of medieval literature, the *libellus* or booklet… which was meant to be sewn roughly and often left without a cover [and] is utterly off limits to us by virtue of its inability to cross the barrier of time without the rare help of exceptional circumstances (the Damascus geniza, for example)” (351).] Furthermore, Giannini and Minervini offer a dating of T-F^2^ to the second half of the twelfth century, suggesting that the writing is reminiscent of the rough draft style used in England in that period.^[Giannini and Minervini provide an in-depth analysis of the available fragment image and conclude that the fragment was most likely produced in Europe as it does not “share any grapho-phonetic or lexical peculiarities with the Outremer French *scripta*” (345). Radiciotti and D’Ottone likewise point to a twelfth-century, European origin story for the Old French pieces present among the Damascus fragments (“I frammenti della Qubba” 58).] Based on this dating, T-F^2^ is not just the most well-traveled but also significantly the earliest witness to the T poem. If more unknown pieces of T-F^2^ could somehow be recovered from the dispersed corpus of the Damascus fragments, invaluable insights into the earliest iterations of Version T could be revealed.  
 
@@ -171,5 +170,4 @@ Although Giannini and Minervini cannot say with any certainty how or when T-F^2^
 > …the story of the Egyptian prostitute who chose, after visiting the Church of the Holy Sepulchre in Jerusalem, to become a penitent hermit in the Transjordanian desert, had an immediate appeal among Western pilgrims on their way to the holy places. The saint, moreover, was venerated in the Orthodox and Coptic churches, thus representing an element of cultural convergence between the Franks and the local Christians. (346)  
 
 The fragmentary yet invaluable witness of T-F^2^ underscores the significance of examining each manuscript that preserves *La vie de sainte Marie l'Égyptienne*. Through careful attention to the textual, paleographic, and material details of these manuscripts, we gain a deeper understanding not only of the text’s transmission but also of its reach and resonance across disparate cultural and geographic contexts. Together, the histories of these eight manuscript witnesses illuminate the diverse audiences — monastics (T-C), nobles (T-E), collectors (T-F^1^), scholars (T-B), travelers (T-F^2^) — whose own interests have intersected the enduring work of the T-poet.
-
 
