Updated code for 2.1 (still needs fix for folio #s overlapping); changed special character for "poitrine" v.643 in T-E

--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -5,35 +5,13 @@ format:
     page-layout: full
 ---
 
-```{r setup, include=FALSE}
-# Load required libraries
-library(rvest)
-library(xml2)
-library(dplyr)
-library(stringr)
+This is the first part of the second chapter of my Quarto book...
 
-source("extract_sections_from_googledoc.R")
-source("convert-html-to-markdown.R")
-```
 
-```{r content, echo=FALSE, results='asis'}
-# Extract chapter 2.1 from google doc (suppress output)
-invisible(
-    extract_section_by_name(
-        html_file = "temp_files/dissertation.html", 
-        section_name = "2.1 An Approach to Editing Version T, Part 1", 
-        output_file = "temp_files/googledoc_chapter2-1.html", 
-        clean_html = FALSE, 
-        verbose = FALSE
-    )
-)
 
-# Read and convert the HTML to markdown
-converted_markdown <- convert_html_to_markdown("temp_files/googledoc_chapter2-1.html")
-
-# Output the markdown content
-cat(converted_markdown)
-```
+# Excerpt of T-E (Portrait 2, vv.613-702)
+Paris, BnF Arsenal, 3516, ff.115r, col.d, line 13 - 115v, col.b, line 2 \
+Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1b55000507q/f232.item).
 
 
 ::: {.column-page-outset layout="[[6,6,6]]"}
@@ -41,32 +19,58 @@ cat(converted_markdown)
 ::: {.column}
 ## Minimal
 
-```{r ch2-1-function, file="convert-xml-to-html.R"}
+```{r te-setup}
+# Load the xml2 package
+library(xml2)
+
+#Path to xml file
+path_xml <- "data/T-E.xml"
 ```
 
-```{r ch2-1-minimal, results='asis'}
+```{r te-function, file="convert-xml-to-html.R"}
+```
+
+
+```{r te-minimal, results='asis'}
 # PRINT "MINIMAL" VERSION
-convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "minimal", min_line = 613, max_line = 702)
+convert_xml_to_html(
+  xml_file = path_xml,
+  version_name = "minimal",
+  min_line = 613,
+  max_line = 702
+)
 ```
 
 :::
 
 ::: {.column}
 ## Intermediate
+## Intermediate
 
-```{r ch2-1-intermediate, results='asis'}
+```{r te-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
-convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "intermediate", min_line = 613, max_line = 702)
+convert_xml_to_html(
+  xml_file = path_xml,
+  version_name = "intermediate",
+  min_line = 613,
+  max_line = 702
+)
 ```
 
 :::
 
 ::: {.column}
 ## Extensive
+## Extensive
 
-```{r ch2-1-extensive, results='asis'}
+```{r te-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
-convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "extensive", min_line = 613, max_line = 702)
+convert_xml_to_html(
+  xml_file = path_xml,
+  version_name = "extensive",
+  min_line = 613,
+  max_line = 702
+)
 ```
 
 :::
